--- a/index.html
+++ b/index.html
@@ -99,6 +99,9 @@
    </li>
   </ul>
  </div>
+ <div class="main">
+     <h1>Curved Border Radius in HTML CSS JavaScript</h1>
+ </div>
  <div class="toggle-bar">
   <i class="opened fas fa-bars"></i>
   <i class="closed fas fa-times"></i>
