--- a/index.html
+++ b/index.html
@@ -100,7 +100,8 @@
   </ul>
  </div>
  <div class="main">
-     <h1>Curved Border Radius in HTML CSS JavaScript</h1>
+     <h1>Curved Border Radius</h1>
+     <h1>in HTML CSS JavaScript</h1>
  </div>
  <div class="toggle-bar">
   <i class="opened fas fa-bars"></i>
